@@ -1,3 +1,7 @@
+TheKabal (12 July 2014)
+--------------------------------------
+For _SERVER, _GET and _POST, isset will not correctly detect null, while array_key_exists will - standardizing on this choice
+
 TheKabal (6 July 2014)
 --------------------------------------
 Death to $_REQUEST calls begins (part one and two, more to follow)
